# Flutter_Demo

./: .gitignore  README.md
ido_sdk_flutter/demo/: pubspec.yaml
ido_sdk_flutter/demo/android/: build.gradle
ido_sdk_flutter/demo/android/app/: build.gradle
ido_sdk_flutter/demo/ios/: Podfile
ido_sdk_flutter/demo/ios/Runner/: Info.plist
ido_sdk_flutter/demo/ios/Runner.xcodeproj/: project.pbxproj
ido_sdk_flutter/demo/lib/: main.dart
ido_sdk_flutter/demo/lib/l10n/: intl_en.arb  intl_zh.arb
ido_sdk_flutter/demo/lib/utility/: bind_state_storage.dart
ido_sdk_flutter/ido_sdk/bluetooth_sdk/: pubspec.yaml
ido_sdk_flutter/ido_sdk/bluetooth_sdk/android/: build.gradle  consumer-rules.pro  proguard-rules.pro  settings.gradle
ido_sdk_flutter/ido_sdk/bluetooth_sdk/ios/: flutter_bluetooth.podspec
ido_sdk_flutter/ido_sdk/bluetooth_sdk/lib/: ido_bluetooth.dart  ido_bluetooth_manager.dart  ido_bluetooth_update_log.dart
ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_alexa/: pubspec.yaml
ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_channel/: pubspec.yaml
ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_core/: pubspec.yaml
ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/: pubspec.yaml
ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/android/: CMakeLists.txt  build.gradle  settings.gradle
ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/android/gradle/wrapper/: gradle-wrapper.properties
ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/android/src/main/: AndroidManifest.xml
ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_lib/: pubspec.yaml
(+1341 files in other folders)
